Redesigned the dependency information on the http://www.nmr-relax.com/download.html webpage.
The dependencies are now listed in a proper table rather than a HTML list, and these have all been
shifted into the dependency section.  This is rather than having one section per operating system as
the dependency lists were now almost all identical anyway.

--- a/download.html
+++ b/download.html
@@ -32,6 +32,7 @@
     <ul>
     <li><a href="download.html#Current_release">Current release</a>
      <ul>
+      <li><a href="download.html#Dependencies">Dependencies</a></li>
       <li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
       <li><a href="download.html#MS_Windows">MS Windows</a></li>
       <li><a href="download.html#Mac_OS_X">Mac OS X</a></li>
@@ -66,26 +67,74 @@
 
       <p>For details about the relax GPG signatures and their usage, see the Security section at the <a href="http://www.nmr-relax.com/download.html#Security">end of this page</a>.</p>
 
-      <h3>Dependencies</h3>
+<!-- Dependencies -->
+    <div id="Dependencies" class="main_h2">
+      <h2>Dependencies</h2>
 
-      <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
+        <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
 
-      <p>Note that only the official Python distribution from <a href="http://python.org">python.org</a> is supported.  If you use the Enthought Python Distribution (EPD) or other non-official distributions you may encounter problems with the relax C modules, the graphical user interface, or other issues.  These alternative distributions are to be used at your own risk and any bugs encountered will not be considered as relax bugs.</p>
+        <p>Note that only the official Python distribution from <a href="http://python.org">python.org</a> is supported.  If you use the Enthought Python Distribution (EPD) or other non-official distributions you may encounter problems with the relax C modules, the graphical user interface, or other issues.  These alternative distributions are to be used at your own risk and any bugs encountered will not be considered as relax bugs.</p>
 
-      <h4>wxPython</h4>
+        <h4>wxPython</h4>
 
-      <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.  As wxPython currently does not support Python 3, you will need to use Python 2 to access the GUI.</p>
+          <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.  As wxPython currently does not support Python 3, you will need to use Python 2 to access the GUI.</p>
 
-      <h4>SciPy</h4>
+          <p>When using a 64-bit Mac OS X system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7. One version can be downloaded <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.1.1-cocoa-py2.7.dmg">here</a>.</p>
 
-      <p>Numerical integration is required for the frame order theory.  This is currently not implemented within relax so the QUADPACK numerical integration provided by <a href="http://www.scipy.org/">SciPy</a> is used.  Without this package being installed, the frame order analysis will not be accessible.</p>
+        <h4>SciPy</h4>
+
+          <p>Numerical integration is required for the frame order theory.  This is currently not implemented within relax so the QUADPACK numerical integration provided by <a href="http://www.scipy.org/">SciPy</a> is used.  Without this package being installed, the frame order analysis will not be accessible.</p>
+
+        <h4>Pyreadline</h4>
+
+          <p>For using relax's prompt UI, completion of the user function name using the tab key is a very useful feature.  On Linux and Mac OS X systems this will occur automatically.  However to enable this on MS Windows, the <a href="https://pypi.python.org/pypi/pyreadline">pyreadline</a> package is required.</p>
+
+        <h4 id="dep_versions">Minimal versions</h4>
+
+          <table class="dep_table">
+            <tbody>
+              <tr>
+                <td class="dep_td_head"><strong>Package</strong></td>
+                <td class="dep_td_head"><strong>Version</strong></td>
+                <td class="dep_td_head"><strong>Download link</strong></td>
+              </tr>
+              <tr>
+                <td><a href="http://python.org">Python</a></td>
+                <td>&ge; 2.5</td>
+                <td><a href="https://www.python.org/downloads/">Python downloads</a></td>
+              </tr>
+              <tr>
+                <td><a href="http://numpy.scipy.org/">NumPy</a></td>
+                <td>&ge; 1.6</td>
+                <td><a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></td>
+              </tr>
+              <tr>
+                <td><a href="http://www.scipy.org/">SciPy</a> (optional)</td>
+                <td>&ge; 0.7.1</td>
+                <td><a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></td>
+              </tr>
+              <tr>
+                <td><a href="http://www.wxpython.org/">wxPython</a> (optional)</td>
+                <td>&ge; 2.8</td>
+                <td><a href="http://www.wxpython.org/download.php">wxPython downloads</a></td>
+              </tr>
+              <tr>
+                <td><a href="https://pypi.python.org/pypi/pyreadline">pyreadline</a> (optional, MS Windows)</td>
+                <td>&ge; 1.7</td>
+                <td><a href="https://pypi.python.org/pypi/pyreadline">pyreadline downloads</a></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <p>Note that when using the <a href="download.html#Mac_app">Mac OS X relax application</a>, that all these packages will be bundled with the application and hence do not need to be installed.</p>
+    </div>
 
 
 <!-- GNU Linux -->
     <div id="GNU_Linux" class="main_h2">
       <h2>GNU/Linux</h2>
 
-      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32-bit (i686) and 64-bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install Python 2.7.</p>
+      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32-bit (i686) and 64-bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install <a href="download.html#dep_versions">Python 2.7</a>.</p>
 
 <table class="software_table">
   <tbody>
@@ -117,15 +166,6 @@
 
           <p>You can browse the relax releases packaged within Gentoo at the <a href="https://packages.gentoo.org/package/sci-chemistry/relax">sci-chemistry/relax package page</a>.  If the desired version is not available, please contact the Gentoo developers or download the relevant source package below.</p>
 
-        <h3>Dependencies</h3>
-          <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
-          <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.7/">Python 2.7.7 release page</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.6: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
-            <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
-            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
-          </ul>
-
     </div>
 
 
@@ -135,7 +175,7 @@
       <h2>MS Windows</h2>
       <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore if there are problems with the compiled C modules and the command:</p>
       <p><em>$ relax --info</em></p>
-      <p>says that the C modules are not installed, please install Python 2.7.</p>
+      <p>says that the C modules are not installed, please install <a href="download.html#dep_versions">Python 2.7</a>.</p>
 
 <table class="software_table">
   <tbody>
@@ -154,16 +194,6 @@
   </tbody>
 </table>
 
-        <h3>Dependencies</h3>
-          <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.7/">Python 2.7.7 release page</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.6: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
-            <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
-            <li><a href="https://pypi.python.org/pypi/pyreadline">pyreadline</a> (optional): <a href="https://pypi.python.org/pypi/pyreadline">pyreadline downloads</a></li>
-            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
-          </ul>
-
-
         <h3>System path</h3>
          <p>To execute relax, both the relax and Python installation directories will need to be added to the system path.  For MS Windows the instructions for modifying the system path are given <a href="windows_devel.html#path">here</a>.</p>
     </div>
@@ -175,7 +205,7 @@
       <h2>Mac OS X</h2>
         <p>There are 3 ways of installing relax on a Mac.  These are using the pre-compiled relax application, Fink or the <a href="download.html#Source_code_release">source releases</a>.  If you are a fan of the <a href="http://mxcl.github.com/homebrew/">Homebrew</a> project, please read this <a href="http://thread.gmane.org/gmane.science.nmr.relax.user/1365">detailed explanation</a> for how to set up relax using the source release.</p>
 
-        <h3>Stand-alone application</h3>
+        <h3 id="Mac_app">Stand-alone application</h3>
 
         <p>The stand-alone relax application requires none of the dependencies listed below to be installed.  It is a universal binary compiled for i386, x86-64 and ppc64 (fat3) with the Mac OS X 10.5 framework.  It should therefore run on most Mac OS X systems at or above version 10.5.</p>
 
@@ -235,17 +265,6 @@
             <li><a href="http://pdb.finkproject.org/pdb/package.php/relax-py24">relax-py24</a></li>
           </ul>
 
-        <h3>Dependencies</h3>
-          <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.7/">Python 2.7.7 release page</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.6: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
-            <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
-            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
-          </ul>
-
-        <p>These need only to be manually installed if the source installation method is used.</p>
-        <p>When using a 64-bit system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7. One version can be downloaded <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.1.1-cocoa-py2.7.dmg">here</a>.</p>
-
     </div>
 
 
@@ -279,14 +298,6 @@
   </tbody>
 </table>
 
-
-        <h3>Dependencies</h3>
-          <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.7/">Python 2.7.7 release page</a></li>
-            <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.6: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
-            <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
-            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
-          </ul>
 
          <h3 id="compilation">Compilation</h3>
          <p>For compiling the C modules relax uses the <a href='http://www.scons.org/'>SCons</a> cross platform compilation tool.   Building these modules is currently only required for the exponential curve fitting used to determine the R<sub>1</sub> and R<sub>2</sub> relaxation rates.  By <a href='http://www.scons.org/download.php'>downloading</a> and installing <em>SCons</em> and running the command:</p>
