Editing of the security section at http://www.nmr-relax.com/download.html#Security.

--- a/download.html
+++ b/download.html
@@ -340,11 +340,11 @@
 <div id="Security" class="main_box">
     <h1>Security</h1>
 
-    <p>To check that the file hasn't been compromised, firstly download the GPG signature for the distribution package.  Then to test this signature, download the relax <a href="https://gna.org/project/memberlist-gpgkeys.php?group=relax" title="relax GPG public key">public key</a> and run the command:</p>
+    <p>To check that the file has not been compromised, first download the GPG signature for the distribution package.  Then, to test this signature, download the relax <a href="https://gna.org/project/memberlist-gpgkeys.php?group=relax" title="relax GPG public key">public key</a> and run the command:</p>
 
       <p><em>> gpg --verify --default-key relax relax-x.x.x.release_type.file_type.sig</em></p>
 
-      <p>where <em>x.x.x</em> is the program version; <em>release_type</em> is one of 'GNU-Linux.i686', 'Win32', or 'src'; and <em>file_type</em> is either 'tar.bz2' or 'zip'.  The GPG program can be downloaded from the <a href='http://www.gnupg.org/'>GNU Privacy Guard</a> web site.</p>
+      <p>where <em>x.x.x</em> is the program version; <em>release_type</em> is one of 'GNU-Linux.i686', 'Darwin', 'Win32', or 'src'; and <em>file_type</em> is either 'tar.bz2', 'zip', or 'dmg'.  The GPG program can be downloaded from the <a href='http://www.gnupg.org/'>GNU Privacy Guard</a> web site.</p>
   </div>
 
 
