The relax software tables at http://www.nmr-relax.com/download.html are now fixed cell width.

--- a/download.html
+++ b/download.html
@@ -139,10 +139,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-3.2.3.GNU-Linux.i686.tar.bz2" title="relax">relax-3.2.3.GNU-Linux.i686.tar.bz2</a></td>
@@ -180,10 +180,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-3.2.3.Win32.zip" title="relax">relax-3.2.3.Win32.zip</a></td>
@@ -213,10 +213,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-3.2.3.Darwin.dmg" title="relax">relax-3.2.3.Darwin.dmg</a></td>
@@ -278,10 +278,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-3.2.3.src.tar.bz2" title="relax">relax-3.2.3.src.tar.bz2</a></td>
@@ -370,10 +370,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2469">Version 3.2.3</a> (2014-07-01)</em></td></tr>
@@ -542,10 +542,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2448">Version 3.1.7</a> (2014-03-17)</em></td></tr>
@@ -871,10 +871,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2420">Version 3.0.2</a> (2013-11-26)</em></td></tr>
@@ -1003,10 +1003,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2384">Version 2.2.5</a> (2013-03-24)</em></td></tr>
@@ -1252,10 +1252,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2369">Version 2.1.2</a> (2012-10-17)</em></td></tr>
@@ -1384,10 +1384,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2354">Version 2.0.0</a> (2012-06-12)</em></td></tr>
@@ -1438,10 +1438,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2348">Version 1.3.16</a> (2012-05-11)</em></td></tr>
@@ -2034,10 +2034,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2001">Version 1.2.15</a> (2008-11-27)</em></td></tr>
@@ -2422,10 +2422,10 @@
 <table class="software_table">
   <tbody>
     <tr>
-      <td class="software_td_head"><strong>Distribution package</strong></td>
-      <td class="software_td_head"><strong>MD5 checksum</strong></td>
-      <td class="software_td_head"><strong>GPG signature</strong></td>
-      <td class="software_td_head"><strong>File size (bytes)</strong></td>
+      <td class="software_td_head1"><strong>Distribution package</strong></td>
+      <td class="software_td_head2"><strong>MD5 checksum</strong></td>
+      <td class="software_td_head3"><strong>GPG signature</strong></td>
+      <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1044">Version 1.0.10</a> (2006-01-14)</em></td></tr>
