Redirected the download links for relax 3.2.1 to http://www.nmr-relax.com/download_request.html.

--- a/download.html
+++ b/download.html
@@ -455,39 +455,39 @@
     <tr><td class="software_td_head"></td><td class="software_td_head"></td><td class="software_td_head"></td><td class="software_td_head"></td></tr>
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2462">Version 3.2.1</a> (2014-05-23)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.GNU-Linux.i686.tar.bz2" title="relax">relax-3.2.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.2.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>8dcbcad70b44065c1feeb2264dbb29e2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">84,747,100</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.2.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.2.1.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>af4ff3383c7c300537d2b95d9b99db87</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">85,022,072</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.Win32.zip" title="relax">relax-3.2.1.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.2.1.Win32.zip</a></td>
       <td><tt><small>45535dd6811125a58b92812f0e167e82</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">89,413,392</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.Darwin.dmg" title="relax">relax-3.2.1.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.2.1.Darwin.dmg</a></td>
       <td><tt><small>bd057489a69c59d859ac75c5d8a1d11f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">292,893,728</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.src.tar.bz2" title="relax">relax-3.2.1.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.2.1.src.tar.bz2</a></td>
       <td><tt><small>cdf5e5e9fc5d1a369fbbb6289ee10715</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">85,017,557</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.src.zip" title="relax">relax-3.2.1.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.2.1.src.zip</a></td>
       <td><tt><small>550ba355b3bbe08b5a78538883450002</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.2.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td align="right">89,519,845</td>
     </tr>
 
